--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 .cards {
     display: grid;
-    grid-gap: 40px;
+    grid-gap: 25px;
     /* padding: 20px; */
     align-items: center;
     /* row-gap: 2fr;
@@ -42,7 +42,7 @@ body {
     grid-template-rows:min-max(100px,auto) ;
     padding-left: 70px;
     padding-right: 70px;
-    padding-top: 12px;
+    padding-top: 5px;
 }
 
 .card {
@@ -110,12 +110,11 @@ h1, h2 {
 
 }
 
-@media screen and (min-width: 375px) and (max-width:1440px){
-
+@media only screen and (min-width:370px) and (max-width:1340px) {
 
 .cards{
-margin: 12px auto 0 auto; 
-max-width: 500px;
+margin: 2px auto 0 auto; 
+/* max-width: 500px; */
 display:flex;
 flex-direction: column;
 max-height: 60vh;
@@ -123,11 +122,12 @@ grid-gap: 22px;
 }
 .attribution{
     /* padding-top: 780px; */
-    padding-top: 48rem;
+    padding-top: 57rem;
 }
 
 h1, h2 {
 margin-top: 1px;
+
 }
 
 }
